# personal-library

./: .gitignore  mypy.ini  pyproject.toml  pyrightconfig.json  schema.sql
src/library_app/: main.py
src/library_app/controller/: main_controller.py
src/library_app/dev/: seed.py
src/library_app/model/: covers.py  db.py  entities.py  enums.py  openlibrary.py  repository.py
src/library_app/util/: worker.py
src/library_app/view/: add_item_dialog.py  item_detail_widget.py  item_table_model.py  main_window.py  search_online_dialog.py  types.py
src/personal_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_repository.py
