[project]
name = "personal-library"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pyside6>=6.10.1",
    "pyside6-stubs>=6.7.3.0",
    "ruff>=0.14.9",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pyright>=1.1.407",
    "pytest-cov>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
